@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-10T08:17:28Z",
-  "count_outdated" : 379,
-  "uniques_outdated" : 219,
-  "count" : 409,
+  "timestamp" : "2022-07-10T16:19:43Z",
+  "count_outdated" : 381,
+  "uniques_outdated" : 220,
+  "count" : 410,
   "uniques" : 236,
   "clones" : [
-    {
-      "timestamp": "2022-06-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-27T00:00:00Z",
       "count": 2,
